Bug 456209 - Sidebar entries become missorted when disabling embedded categories in configuration
Summary: Sidebar entries become missorted when disabling embedded categories in config...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.2
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-01 12:41 UTC by Alex
Modified: 2022-07-06 19:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08
Sentry Crash Report:


Attachments
Video content - bugs of Elisa player (3.70 MB, video/mp4)
2022-07-01 12:41 UTC, Alex
Details
attachment-19736-0.html (1.06 KB, text/html)
2022-07-01 13:55 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2022-07-01 12:41:51 UTC
Created attachment 150322 [details]
Video content - bugs of Elisa player

1. Bugs when I trying to select SINGLE track to play. Bug with a progress bar when playing audio.

2. Bugs with navigation. All described in video. See attachments.

/* That's an excellent player, I want to use it for a long time. Please fix this bugs in next releases. */
Comment 1 Nate Graham 2022-07-01 13:53:28 UTC
Hello! I'm glad you're enjoying Elisa. In the future, it's helpful to wrote textual Steps To Reproduce. See https://community.kde.org/Get_Involved/Issue_Reporting

Does the issue with the sidebar showing the wrong view when clicked go away if you restart Elisa? Does it go away if you refresh the music collection and then restart Elisa?
Comment 2 Alex 2022-07-01 13:55:42 UTC
Created attachment 150323 [details]
attachment-19736-0.html

I've tried to restart it, but unsuccessfully.

-------- Original Message --------
On Jul 1, 2022, 4:53 PM, Nate Graham wrote:

> https://bugs.kde.org/show_bug.cgi?id=456209 Nate Graham  changed: What |Removed |Added ---------------------------------------------------------------------------- CC| |nate@kde.org Status|REPORTED |NEEDSINFO Resolution|--- |WAITINGFORINFO --- Comment #1 from Nate Graham  --- Hello! I'm glad you're enjoying Elisa. In the future, it's helpful to wrote textual Steps To Reproduce. See https://community.kde.org/Get_Involved/Issue_Reporting Does the issue with the sidebar showing the wrong view when clicked go away if you restart Elisa? Does it go away if you refresh the music collection and then restart Elisa? -- You are receiving this mail because: You reported the bug.
Comment 3 Yerrey Dev 2022-07-01 17:41:23 UTC
I only have to guess if this is how you got it missorted, but this can be replicated by going into configuration and enabling one of the embedded categories, and then setting it to "Nothing". This makes the last selected embedded category to be appended into the bottom of the list instead of being in their correct position.

The progress bar issue is fixed in master.
Comment 4 Alex 2022-07-02 07:04:03 UTC
Yes, I agree, this can happens when I changing some settings. Can you please fix it in next releases? :)
Comment 5 Bug Janitor Service 2022-07-02 16:07:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/369
Comment 6 Nate Graham 2022-07-06 19:21:00 UTC
Git commit 7a1345ddc8e0b20afb3452497aad088cbcf63734 by Nate Graham, on behalf of Yerrey Dev.
Committed on 06/07/2022 at 19:15.
Pushed by ngraham into branch 'master'.

Fix sidebar entry order when changing embedded categories

We disable dynamicSortFilter as otherwise functions used on the
proxy model will not work properly and reflect the correct changes
in the source model.

M  +1    -0    src/models/viewsproxymodel.cpp

https://invent.kde.org/multimedia/elisa/commit/7a1345ddc8e0b20afb3452497aad088cbcf63734