Fix sidebar entry order when changing embedded categories

We disable dynamicSortFilter as otherwise functions used on the
proxy model will not work properly and reflect the correct changes
in the source model.

BUG: 456209